--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Angel Zarate Piña - Portafolio Personal</title>
+    <!-- Importamos Font Awesome para los iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <style>
         /* --- Configuración Global y Colores --- */
         :root {
-            --color-fondo: #0a192f; /* Azul marino muy oscuro (casi negro) */
-            --color-texto-principal: #ccd6f6; /* Azul muy claro (casi blanco) */
+            --color-fondo: #0a192f; /* Azul marino muy oscuro */
+            --color-texto-principal: #ccd6f6; /* Azul muy claro */
             --color-texto-secundario: #8892b0; /* Gris azulado */
-            --color-acento: #3b82f6; /* Azul brillante (para botones y enlaces) */
-            --color-fondo-tarjeta: #112240; /* Azul marino oscuro (para tarjetas) */
+            --color-acento: #3b82f6; /* Azul brillante */
+            --color-fondo-tarjeta: #112240; /* Azul marino oscuro */
             --fuente-principal: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
         }
 
@@ -77,7 +78,7 @@
             width: 100%;
             top: 0;
             left: 0;
-            background-color: rgba(10, 25, 47, 0.85); /* Fondo azul marino con transparencia */
+            background-color: rgba(10, 25, 47, 0.85);
             backdrop-filter: blur(10px);
             z-index: 100;
             border-bottom: 1px solid var(--color-fondo-tarjeta);
@@ -102,7 +103,7 @@
             font-weight: 500;
         }
 
-        /* --- Botón (para CV y Llave) --- */
+        /* --- Botones --- */
         .btn {
             display: inline-block;
             background-color: transparent;
@@ -112,6 +113,7 @@
             border-radius: 4px;
             font-weight: 500;
             transition: background-color 0.3s ease, color 0.3s ease;
+            cursor: pointer;
         }
 
         .btn:hover {
@@ -121,17 +123,17 @@
 
         /* --- Secciones Generales --- */
         section {
-            padding: 8rem 0 4rem; /* Padding superior alto para compensar el navbar fijo */
+            padding: 8rem 0 4rem;
             min-height: 80vh;
         }
 
-        /* --- Sección Inicio (Presentación) --- */
+        /* --- Sección Inicio --- */
         #inicio {
             display: flex;
             align-items: center;
             justify-content: space-between;
             gap: 2rem;
-            min-height: 100vh; /* Ocupa toda la pantalla */
+            min-height: 100vh;
         }
 
         .inicio-contenido {
@@ -178,6 +180,13 @@
             color: var(--color-acento);
             width: 20px;
             text-align: center;
+        }
+
+        .enlaces-cta {
+            margin-top: 2rem;
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
         }
 
         .redes-sociales {
@@ -235,7 +244,7 @@
             max-width: 800px;
         }
 
-        /* --- Media Queries (Responsivo) --- */
+        /* --- Responsivo --- */
         @media (max-width: 768px) {
             .navbar {
                 flex-direction: column;
@@ -251,7 +260,7 @@
             }
 
             #inicio {
-                flex-direction: column-reverse; /* Pone el texto primero en móviles */
+                flex-direction: column-reverse;
                 text-align: center;
                 padding-top: 10rem;
             }
@@ -271,6 +280,10 @@
             }
 
             .redes-sociales {
+                justify-content: center;
+            }
+
+            .enlaces-cta {
                 justify-content: center;
             }
 
@@ -307,11 +320,14 @@
                 </ul>
 
                 <div class="enlaces-cta">
+                    <!-- Enlace al CV (Google Drive) -->
                     <a href="https://drive.google.com/uc?export=download&id=1k9A7lLDarYpDme0s2m1v9ps_A-yekooM" class="btn" target="_blank" rel="noopener noreferrer">
                         Descargar CV <i class="fa-solid fa-file-arrow-down"></i>
                     </a>
                     
-                    <a href="#" class="btn" style="margin-left: 1rem;">
+                    <!-- Enlace a la Llave Pública (Archivo local generado) -->
+                    <!-- NOTA: Asegúrate de subir 'clave_publica.pem' a GitHub junto con este archivo -->
+                    <a href="clave_publica.pem" download="clave_publica_luis.pem" class="btn">
                         Mi Llave Pública <i class="fa-solid fa-key"></i>
                     </a>
                 </div>
