Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
                 <div class="enlaces-cta">
                     <!-- Enlace al CV (Google Drive) -->
-                    <a href="https://drive.google.com/uc?export=download&id=1k9A7lLDarYpDme0s2m1v9ps_A-yekooM" class="btn" target="_blank" rel="noopener noreferrer">
+                    <a href="https://drive.google.com/drive/u/1/folders/1zhuLGcKOYYn58X0gKpSm-4Ey1Afd-c8n" class="btn" target="_blank" rel="noopener noreferrer">
                         Descargar CV <i class="fa-solid fa-file-arrow-down"></i>
                     </a>
                     
@@ -403,3 +403,4 @@
 
 </body>
 </html>
+
