Fix HTML formatting issues and improve structure

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 <body>
 
     <header class="navbar">
-        <div class="logo">LZP.</div>
+        <div class="logo">LUIS ZARATE.</div>
         <ul>
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#hobbies">Hobbies</a></li>
@@ -403,4 +403,5 @@
 
 </body>
 </html>
+
 
