Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
                 </ul>
 
                 <div class="enlaces-cta">
-                    <a href="cv.pdf" download="CV_Luis_Zarate_Pina.pdf" class="btn">
+                    <a href="cv.pdf" download="CV_Luis_Angel_Zarate_Piña.pdf" class="btn">
                         Descargar CV <i class="fa-solid fa-file-arrow-down"></i>
                     </a>
                     
-                    <a href="clave_publica.pem" download="clave_publica_luis.pem" class="btn">
+                    <a href="clave_publica.pem" download="clave_publica_luis_zarate.pem" class="btn">
                         Mi Llave Pública <i class="fa-solid fa-key"></i>
                     </a>
                 </div>
@@ -379,7 +379,7 @@
             </div>
 
             <div class="youtube-container">
-                <h3>Acerca de Mí (Presentación)</h3>
+                <h3>Presentación PGP</h3>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/TU_ID_DE_VIDEO_AQUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
@@ -416,7 +416,7 @@
             </div>
 
             <div class="videos-container">
-                <h3>Mis Presentaciones Musicales</h3>
+                <h3>Mis Covers</h3>
                 <div class="tiktok-grid">
                     <iframe src="https://www.tiktok.com/embed/v2/7538235951642938644" width="325" height="580" frameborder="0" allowfullscreen style="border-radius: 8px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);"></iframe>
                     <iframe src="https://www.tiktok.com/embed/v2/7519778340694166804" width="325" height="580" frameborder="0" allowfullscreen style="border-radius: 8px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);"></iframe>
@@ -445,3 +445,4 @@
 
 </body>
 </html>
+
