--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
             <div class="youtube-container">
                 <h3>Presentación PGP</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bbgEjMangeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bbgEjMangeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
         </section>
@@ -445,6 +445,7 @@
 
 </body>
 </html>
+
 
 
 
